<resources>
    <string name="app_name">Mobile GKY</string>
    <string name="beranda">Beranda</string>
    <string name="alkitab">Alkitab</string>
    <string name="komisi">Komisi</string>
    <string name="komisiAnak">Komisi Anak</string>
    <string name="komisiKaleb">Komisi Kaleb</string>
    <string name="komisiPasutri">Komisi Pasutri</string>
    <string name="komisiPemudaDewasa">Komisi Pemuda Dewasa</string>
    <string name="komisiRemajaDanPemuda">Komisi Remaja dan Pemuda</string>
    <string name="komisiWanita">Komisi Wanita</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="diakoniaDanOikumene">Diakonia dan Oikumene</string>
    <string name="kebaktianDoa">Kebaktian Doa</string>
    <string name="kebaktianUmum">Kebaktian Umum</string>
    <string name="kelompokKecil">Kelompok Kecil</string>
    <string name="misiPengabaranInjil">Misi/Pengabaran Injil</string>
    <string name="pembinaan">Pembinaan</string>
    <string name="katekisasi">Katekisasi</string>
    <string name="premarital">Pre-marital</string>
    <string name="renunganGema">Renungan Gema</string>
    <string name="rekamanKhotbah">Rekaman Khotbah</string>
    <string name="permohonanDoa">Permohonan Doa</string>
    <string name="KPPK">KPPK</string>
    <string name="lirikLaguRohani">Lirik Lagu Rohani</string>
    <string name="pengakuanIman">Pengakuan Iman</string>
    <string name="kolportase">Kolportase</string>
    <string name="events">Events</string>
    <string name="wartaMingguan">Warta Mingguan</string>
    <string name="liturgiMingguan">Liturgi Mingguan</string>
    <string name="pastAndUpcomingEvents">Past and Upcoming Events</string>
    <string name="jadwalIbadah">Jadwal Ibadah</string>
    <string name="tentangKami">Tentang Kami</string>
    <string name="hubungiKami">Hubungi Kami</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="manajemenKonten">Manajemen Konten</string>
    <string name="jadwalPelayanan">Jadwal Pelayanan</string>
    <string name="pengaturanProfil">Pengaturan Profil</string>
    <string name="ubahPassword">Ubah Password</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hintRenungan">Membuka renungan gema yang tersedia</string>
    <string name="hintMarital">Membuka pelajaran pre-marital</string>
    <string name="hintKatekisasi">Membuka pelajaran sebelum baptis</string>
    <string name="hintPermohonan">Mendaftarkan diri untuk didoakan oleh gereja</string>
    <string name="hintAlkitab">Membuka alkitab</string>
    <string name="hintKelompok">Membuka daftar kelompok kecil yang ada</string>
    <string name="hintWartaMingguan">Membuka halaman warta mingguan</string>
    <string name="hintkelompokKecil">Membuka halaman kelompok kecil</string>
    <string name="hintEvent">Membuka halaman past and upcoming events</string>
    <string name="hintKolportase">Membuka halaman kolportase</string>
    <string name="hintRenunganGema">Membuka halaman renungan gema</string>
    <string name="queryHintKPPK">Cari judul ataupun isi dari KPPK</string>
    <string name="queryHintLirikLaguRohani">Cari judul ataupun isi dari lirik lagu rohani</string>
    <string name="permohonanDoa_textNama">Nama</string>
    <string name="permohonanDoa_textEmail">Email</string>
    <string name="permohonanDoa_textTelepon">Telepon</string>
    <string name="permohonanDoa_textJenisKelamin">Jenis Kelamin</string>
    <string name="permohonanDoa_textPria">Pria</string>
    <string name="permohonanDoa_textWanita">Wanita</string>
    <string name="permohonanDoa_textUmur">Umur</string>
    <string name="permohonanDoa_textDoa">Permohonan Doa</string>
    <string name="register_textNama">Nama</string>
    <string name="register_textPassword">Password</string>
    <string name="register_textKonfirmasiPassword">Konfirmasi Password</string>
    <string name="register_textEmail">Email</string>
    <string name="register_textTelepon">Telepon</string>
    <string name="register_textAlamat">Alamat</string>
    <string name="register_textDataPribadi">Data Pribadi</string>
    <string name="register_textTanggalLahir">Tanggal Lahir</string>
    <string name="register_textDataGereja">Data Gereja</string>
    <string name="register_textIdBaptis">ID Baptis</string>
    <string name="register_textKomisi">Komisi dan Pelayanan</string>
    <string name="register_textPelayanan">Pelayanan</string>
    <string name="register_textKomisiAnak">Anak</string>
    <string name="register_textKomisiKaleb">Kaleb</string>
    <string name="register_textKomisiPasutri">Pasutri</string>
    <string name="register_textKomisiPemudaDewasa">Pemuda Dewasa</string>
    <string name="register_textKomisiRemajaPemuda">Remaja dan Pemuda</string>
    <string name="register_textKomisiWanita">Wanita</string>
    <string name="login_textEmail">Email</string>
    <string name="login_textPassword">Password</string>
    <string name="daftar">Daftar</string>
    <string name="fetchData">Fetch Data</string>
    <string name="kirim">Kirim</string>
    <string name="masuk">Masuk</string>
    <string name="komisiAnak_textPembuka1">Sekolah Minggu, sekolah minggu, rumah anak-anak semua</string>
    <string name="komisiAnak_textPembuka2">Bakti Allah, cinta bangsa, hidup penuh sukacita</string>
    <string name="komisiAnak_textPembuka3">Belajarlah Kitab Suci, cinta Tuhan, gereja maju</string>
    <string name="komisiAnak_textPembuka4">Jalankanlah perintah-Nya, muliakan-Hu sepanjang hidup</string>
    <string name="komisiAnak_textParagraf1">Sekolah Minggu GKY Pluit merupakan sebuah wadah bagi anak-anak usia 0 hingga 12 tahun (bayi hingga kelas 6 SD) untuk beribadah, bertumbuh serta melayani Tuhan. Pertama kali diadakan pada tahun 1973, hingga kini Sekolah Minggu GKY Pluit telah memiliki tiga tempat pelayanan, yaitu: sekolah minggu di Gedung Pluit, sekolah minggu di Gedung PIK, dan sekolah minggu di Sekolah Ipeka Pluit. Sekolah Minggu GKY Pluit memiliki visi dan misi sebagai berikut.</string>
    <string name="komisiAnak_textVisi">Visi</string>
    <string name="komisiAnak_textDetailVisi">Anak-anak sekolah minggu dapat menjadi murid Yesus dan guru sekolah minggu menjadi alat yang Tuhan pakai untuk menjadikan anak-anak murid Tuhan.</string>
    <string name="komisiAnak_textMisi">Misi</string>
    <string name="komisiAnak_textDetailMisi">Melalui ibadah, pembinaan/pemuridan, persekutuan, pelayanan sosial dan pelayanan misi membimbing anak-anak untuk mengenal, percaya, dan taat kepada Kristus Yesus dan menjadi anggota keluarga sekolah minggu dan gereja. Sekolah minggu menjadi keluarga/rumah kedua bagi anak-anak.</string>
    <string name="komisiAnak_textMisi1">Ibadah</string>
    <string name="komisiAnak_textDetailMisi1">Menciptakan ibadah yang membawa anak-anak bisa memuji nama Tuhan, mendengarkan firman Tuhan dan mengaplikasikan firman Tuhan dengan tertib dan bersemangat.</string>
    <string name="komisiAnak_textMisi2">Pembinaan/Pemuridan</string>
    <string name="komisiAnak_textDetailMisi2">Mengusahakan pembinaan yang baik untuk pertumbuhan kerohanian anak, sehingga mengalami perubahan karakter yang semakin menyerupai Kristus.</string>
    <string name="komisiAnak_textMisi3">Persekutuan</string>
    <string name="komisiAnak_textDetailMisi3">Sekolah minggu menjadi sebuah sarana persekutuan yang baik bagi anak-anak dalam hubungan mereka dengan sesama mereka maupun dengan guru di kelas.</string>
    <string name="komisiAnak_textMisi4">Pelayanan Sosial</string>
    <string name="komisiAnak_textDetailMisi4">Anak-anak memiliki kepedulian sosial terhadap orang-orang di sekitar mereka.</string>
    <string name="komisiAnak_textMisi5">Pemberitaan Injil</string>
    <string name="komisiAnak_textDetailMisi5">Anak-anak dapat menjadi seorang yang memberitakan Injil.</string>
    <string name="komisiAnak_textMisiGuru">Misi Guru</string>
    <string name="komisiAnak_textDetailMisiGuru">Melengkapi  guru-guru dan mengusahakan pembinaan untuk meningkatkan kualitas pelayanan guru sekolah minggu, serta kerohanian mereka, melalui training, kelas-kelas pembinaan, dll.</string>
    <string name="kelompokKecil_textParagraf1">Banyak orang dalam dunia masih belum mengenal Tuhan Yesus Kristus. Ia sendiri telah mempercayakan amanat-Nya untuk memuridkan bangsa-bangsa kepada para rasul, murid-murid dan gereja-Nya.</string>
    <string name="kelompokKecil_kutipanInjil">\"Karena itu pergilah, jadikanlah semua bangsa murid-Ku dan baptislah mereka dalam nama Bapa dan Anak dan Roh Kudus, dan ajarlah mereka melakukan segala sesuatu yang telah Kuperintahkan padamu.\" (Matius 28:19-20)</string>
    <string name="kelompokKecil_textParagraf2">Tetapi sebelum kita dapat memuridkan bangsa-bangsa, perlu kita sendiri terlebih dahulu menjadi murid yang sejati.</string>
    <string name="kelompokKecil_textParagraf3">Kelompok Kecil (KK) adalah ketaaatan kita pada kepercayaan dan pendelegasian Yesus Kristus untuk menerima panggilan dan pembentukan menjadi seorang murid Tuhan Yesus. Kita rindu bahwa kita semua dapat bersama-sama bertumbuh dan mengalirkan kehidupan seorang murid Yesus yang sejati kepada orang lain, sehingga banyak orang dapat juga menjadi murid Tuhan.</string>
    <string name="kelompokKecil_textParagraf4">Untuk itu kita memuji Tuhan Yesus Kristus, karena gereja kita terpanggil untuk menjadi gereja berbasiskan KK. Dalam kelompok kecil, kita akan menemnukan 3F1P1M. Penjelasannya adalah sebagai berikut.</string>
    <string name="kelompokKecil_text3F1P1M_1">1. Fun - KK memberikan sukacita dan kesenangan.</string>
    <string name="kelompokKecil_text3F1P1M_2">2. Firman - KK memuaskan kita dengan makanan rohani yang kita butuhkan</string>
    <string name="kelompokKecil_text3F1P1M_3">3. Fellowship - KK pada dasarnya adalah sebuah persekutuan dan keluarga kecil.</string>
    <string name="kelompokKecil_text3F1P1M_4">4. Pray - Dalam KK kita berdoa dan saling mendoakan.</string>
    <string name="kelompokKecil_text3F1P1M_5">5. Multiplikasi - KK membukakan diri bagi orang lain.</string>
    <string name="kelompokKecil_textParagraf5">Mari bergabung dalam KK! Di dalam KK kita bersama-sama belajar, bertumbuh dan menjadi berkat.</string>
    <string name="kelompokKecil_textDefinisi">Definisi Kelompok Kecil</string>
    <string name="kelompokKecil_textDefinisi1">1. Gerakan yang melibatkan jemaat untuk berkumpul dan melayani dalam kelompok-kelompok kecil yang bersifat kekeluargaan, dan</string>
    <string name="kelompokKecil_textDefinisi2">2. mengarahkan jemaat untuk mengemban amanat agung Tuhan Yesus Kristus sehingga setiap orang percaya bersama-sama.</string>
    <string name="kelompokKecil_textDefinisi3">a. Menjadi murid yang sejati dan bertumbuh menuju kepada keserupaan hidup seperti Kristus, dan</string>
    <string name="kelompokKecil_textDefinisi4">b. memikul tanggung jawab memuridkan bangsa-bangsa, sehingga membawa kemuliaan bagi Allah.</string>
    <string name="kelompokKecil_textVisi">Visi</string>
    <string name="kelompokKecil_textDetailVisi">Pemenuhan amanat agung Tuhan (Matius 28:19-20) dan keserupaan dengan Kristus (Roma 8:29, 1Yoh. 3:2).</string>
    <string name="kelompokKecil_textMisi">Misi</string>
    <string name="kelompokKecil_textMisi1">1. Membawa jemaat bertumbuh menyerupai Kristus dalam semua aspek kehidupan, yang dilandasi dengan pengenalan dan kedekatan akan Tuhan, dan menikmati kelimpahan hidup rohani yang sesungguhnya secara nyata dalam kehidupan sehari-hari.</string>
    <string name="kelompokKecil_textMisi2">2. Mendorong jemaat untuk mengambil tanggung jawab rohani dan untuk turut serta dalam kegiatan penginjilan dan pemuridan.</string>
    <string name="kelompokKecil_textMisi3">3. Membangun kualitas hidup jemaat yang mampu menciptakan keluarga, gereja, dan masyarakat yang berkenan di hadapan Tuhan.</string>
</resources>