<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fingertech.mobileclientgky.KelompokKecilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Kelompok Kecil"
            android:id="@+id/textView"
            android:textColor="#ffffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textParagraf1"
                        android:id="@+id/kelompokKecil_textParagraf1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_kutipanInjil"
                        android:id="@+id/kelompokKecil_kutipanInjil"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textParagraf2"
                        android:id="@+id/kelompokKecil_textParagraf2"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textParagraf3"
                        android:id="@+id/kelompokKecil_textParagraf3"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textParagraf4"
                        android:id="@+id/kelompokKecil_textParagraf4"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_text3F1P1M_1"
                        android:id="@+id/kelompokKecil_text3F1P1M_1"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_text3F1P1M_2"
                        android:id="@+id/kelompokKecil_text3F1P1M_2"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_text3F1P1M_3"
                        android:id="@+id/kelompokKecil_text3F1P1M_3"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_text3F1P1M_4"
                        android:id="@+id/kelompokKecil_text3F1P1M_4"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_text3F1P1M_5"
                        android:id="@+id/kelompokKecil_text3F1P1M_5"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textParagraf5"
                        android:id="@+id/kelompokKecil_textParagraf5"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDefinisi"
                        android:id="@+id/kelompokKecil_textDefinisi"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDefinisi1"
                        android:id="@+id/kelompokKecil_textDefinisi1"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDefinisi2"
                        android:id="@+id/kelompokKecil_textDefinisi2"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDefinisi3"
                        android:id="@+id/kelompokKecil_textDefinisi3"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDefinisi4"
                        android:id="@+id/kelompokKecil_textDefinisi4"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textVisi"
                        android:id="@+id/kelompokKecil_textVisi"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textDetailVisi"
                        android:id="@+id/kelompokKecil_textDetailVisi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textMisi"
                        android:id="@+id/kelompokKecil_textMisi"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textMisi1"
                        android:id="@+id/kelompokKecil_textMisi1"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textMisi2"
                        android:id="@+id/kelompokKecil_textMisi2"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kelompokKecil_textMisi3"
                        android:id="@+id/kelompokKecil_textMisi3"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>