<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fingertech.mobileclientgky.KomisiAnakFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffb01815">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Komisi Anak"
            android:id="@+id/textView"
            android:textColor="#ffffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffddbb"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textPembuka1"
                        android:id="@+id/komisiAnak_textPembuka1"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textPembuka2"
                        android:id="@+id/komisiAnak_textPembuka2"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textPembuka3"
                        android:id="@+id/komisiAnak_textPembuka3"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textPembuka4"
                        android:id="@+id/komisiAnak_textPembuka4"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textParagraf1"
                        android:id="@+id/komisiAnak_textParagraf1"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textVisi"
                        android:id="@+id/komisiAnak_textVisi"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailVisi"
                        android:id="@+id/komisiAnak_textDetailVisi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi"
                        android:id="@+id/komisiAnak_textMisi"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi"
                        android:id="@+id/komisiAnak_textDetailMisi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi1"
                        android:id="@+id/komisiAnak_textMisi1"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi1"
                        android:id="@+id/komisiAnak_textDetailMisi1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi2"
                        android:id="@+id/komisiAnak_textMisi2"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi2"
                        android:id="@+id/komisiAnak_textDetailMisi2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi3"
                        android:id="@+id/komisiAnak_textMisi3"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi3"
                        android:id="@+id/komisiAnak_textDetailMisi3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi4"
                        android:id="@+id/komisiAnak_textMisi4"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi4"
                        android:id="@+id/komisiAnak_textDetailMisi4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisi5"
                        android:id="@+id/komisiAnak_textMisi5"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisi5"
                        android:id="@+id/komisiAnak_textDetailMisi5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textMisiGuru"
                        android:id="@+id/komisiAnak_textMisiGuru"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komisiAnak_textDetailMisiGuru"
                        android:id="@+id/komisiAnak_textDetailMisiGuru"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>